@@ -8,9 +8,17 @@ PROJECT(configuration)
 ## Remember: on Linux order does matter!
 INCLUDE(YarpLibraryNames)
 
+INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
+FOREACH(conf version system options)
+  SET(outconf ${CMAKE_BINARY_DIR}/include/yarp/config/${conf}.h)
+  CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/conf/yarp_config_${conf}.h.in
+                 ${outconf} IMMEDIATE)
+  INSTALL_FILES(/include/yarp/config FILES ${outconf})
+ENDFOREACH(conf)
+
+
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/conf/YARPConfig.cmake.in
                ${CMAKE_BINARY_DIR}/YARPConfig.cmake @ONLY IMMEDIATE)
-
 
 # There are several macros we would like to have available
 # for user
