@@ -5,3 +5,6 @@ ELSE(YARP_HAS_MATH_LIB)
 SET(YARP_LIBRARIES "${YARP_dev_LIB};${YARP_EXTMOD_LIBS};${YARP_dev_EXT_LIBS};${YARP_sig_compat_LIB};${YARP_OS_compat_LIB};${YARP_sig_LIB};${YARP_OS_LIB};${ACE_LIB}")
 SET(YARP_INCLUDES "${ACE_INCLUDE_DIR};${YARP_OS_INC};${YARP_sig_INC};${YARP_dev_INC};${YARP_OS_compat_INC}")
 ENDIF(YARP_HAS_MATH_LIB)
+
+# pick up auto-generated headers as well
+SET(YARP_INCLUDES "${YARP_INCLUDES};${CMAKE_BINARY_DIR}/include")
