@@ -47,8 +47,10 @@ IF(EXISTS "${CMAKE_ROOT}/Modules/TestBigEndian.cmake")
     TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
     IF(${IS_BIG_ENDIAN})
 	SET(YARP_DEFINES_ACCUM ${YARP_DEFINES_ACCUM} -DYARP_BIG_ENDIAN)
+	SET(YARP_BIG_ENDIAN 1)
     ELSE(${IS_BIG_ENDIAN})
 	SET(YARP_DEFINES_ACCUM ${YARP_DEFINES_ACCUM} -DYARP_LITTLE_ENDIAN)
+	SET(YARP_LITTLE_ENDIAN 1)
     ENDIF(${IS_BIG_ENDIAN})
 ENDIF(EXISTS "${CMAKE_ROOT}/Modules/TestBigEndian.cmake")
 
@@ -56,8 +58,10 @@ ENDIF(EXISTS "${CMAKE_ROOT}/Modules/TestBigEndian.cmake")
 IF (USE_STL_STRING)
   SET(YARP_DEFINES_ACCUM ${YARP_DEFINES_ACCUM} -DYARP_USE_STL_STRING=1)
   MESSAGE(STATUS "Using std::string")
+  SET(YARP_USE_STL_STRING 1)
+ELSE (USE_STL_STRING)
+  SET(YARP_USE_ACE_STRING 1)
 ENDIF (USE_STL_STRING)
-
 
 
 # get an int32 type
@@ -163,6 +167,7 @@ IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
     SET(CMAKE_EXTRA_INCLUDE_FILES ace/config.h ace/String_Base_Const.h)
     YARP_CHECK_TYPE_SIZE(ACE_String_Base_Const::size_type SIZE_TYPE)
     SET(CMAKE_EXTRA_INCLUDE_FILES) 
+    SET(YARP_USE_ACE_STRING_BASE_CONST_SIZE_TYPE 1)
   ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CheckTypeSize.cmake")
 ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
 
