@@ -2,6 +2,11 @@
 # This file is the official location of the current YARP version number.
 # Please do not add extra numerals in this file or change its formatting.
 
-SET(CPACK_PACKAGE_VERSION_MAJOR "2")
-SET(CPACK_PACKAGE_VERSION_MINOR "2")
-SET(CPACK_PACKAGE_VERSION_PATCH "5rc0")
+SET(YARP_VERSION_MAJOR "2")
+SET(YARP_VERSION_MINOR "2")
+SET(YARP_VERSION_PATCH "5")
+SET(YARP_VERSION_MODIFIER "rc0")
+
+SET(CPACK_PACKAGE_VERSION_MAJOR "${YARP_VERSION_MAJOR}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${YARP_VERSION_MINOR}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${YARP_VERSION_PATCH}${YARP_VERSION_MODIFIER}")
