@@ -1,0 +1,8 @@
+// -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
+
+#ifndef YARP_CONFIG_VERSION_H
+#define YARP_CONFIG_VERSION_H
+
+#cmakedefine YARP_HAS_MATH_LIB
+
+#endif
