@@ -1,0 +1,12 @@
+// -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
+
+#ifndef YARP_CONFIG_VERSION_H
+#define YARP_CONFIG_VERSION_H
+
+#define YARP_VERSION_MAJOR ${YARP_VERSION_MAJOR}
+#define YARP_VERSION_MINOR ${YARP_VERSION_MINOR}
+#define YARP_VERSION_PATCH ${YARP_VERSION_PATCH}
+#define YARP_VERSION_MODIFIER "${YARP_VERSION_MODIFIER}"
+#define YARP_VERSION "${YARP_VERSION_MAJOR}.${YARP_VERSION_MINOR}.${YARP_VERSION_PATCH}${YARP_VERSION_MODIFIER}"
+
+#endif
